[gd_scene load_steps=6 format=3 uid="uid://bknfwojfftpv6"]

[ext_resource type="Script" path="res://scene/End_game/Script/enemy.gd" id="1_43asq"]
[ext_resource type="Texture2D" uid="uid://dujonexph2r7v" path="res://scene/End_game/Assets/primal_enemy.png" id="2_fngc2"]
[ext_resource type="AudioStream" uid="uid://d2hcfxiovkf6i" path="res://Global/third_lv/pong.mp3" id="3_aie87"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_weir0"]
size = Vector2(15, 51.875)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_036ho"]
size = Vector2(1276.75, 34.8987)

[node name="Enemy" type="CharacterBody2D"]
texture_filter = 1
scale = Vector2(1.6, 1.6)
collision_mask = 0
script = ExtResource("1_43asq")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1.5, 1)
scale = Vector2(1.64317, 1.89702)
texture = ExtResource("2_fngc2")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0.624999)
shape = SubResource("RectangleShape2D_weir0")

[node name="follow_area" type="Area2D" parent="."]
position = Vector2(-1, -114)
scale = Vector2(1, 2.64)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="follow_area"]
position = Vector2(-647.625, 44.697)
scale = Vector2(1, 8.22727)
shape = SubResource("RectangleShape2D_036ho")

[node name="collision_area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="collision_area"]
position = Vector2(-0.5, 0.937502)
shape = SubResource("RectangleShape2D_weir0")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="collision_area"]
stream = ExtResource("3_aie87")
volume_db = 10.4
pitch_scale = 0.59

[node name="Timer" type="Timer" parent="."]
wait_time = 13.0
autostart = true

[node name="error" type="Timer" parent="."]
wait_time = 26.0
autostart = true

[connection signal="body_entered" from="follow_area" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="follow_area" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="collision_area" to="." method="_on_collision_area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="error" to="." method="_on_error_timeout"]
